* Prevent exception when using Selector to search for an attribute that is not present. Closes #11395. [gryn, Andrew Dupont]

* Fix Firefox Event.element() returning the wrong node for image onload/onerror events.
  Also fixe Event.element() exception in IE when called from a window event observer. Closes #8652, #11296, #11259.  [dcrall, jddalton, kangax]

* Fix issue where Safari 3 deletes custom properties from the document object when the page is returned to via the back button. Closes #11430. [mzsanford, kangax, Andrew Dupont]

* Integrate support for the W3C Selectors API into the Selector class.
  Will now use the API when possible (browser supports the API *and* recognizes the given selector).
  Means minor changes to the semantics of :enabled, :disabled, and :empty in order to comply with CSS spec. [#1 state:resolved] [Andrew Dupont]

* Avoid re-extending element in Element#getDimensions. [kangax]

* Prevent Hash#toQueryString from serializing objects. [kangax, Tobie Langel]

* Fix Event#pointer in IE strict and quirks mode. Closes #9920. [ephogy, kangax, Tobie Langel]

* Refactor String#escapeHTML to avoid using the `with` statement. [Tobie Langel]

* Make Element#writeAttribute handle frameborder attribute in IE. Closes #11068. [Nick Stackenburg, Tobie Langel]

* Minor clean-up of selector.js. Closes #10844. [Richard Quadling]

* Make String#unescapeHTML strip tags in IE. Closes #10173. [kangax]

* Performance improvements for Enumerables. Closes #11264. [Ben, Samuel Lebeau]

* Make tagName comparisons XHTML-compliant. Closes #11012, #11013, #11014. [cfis, Tobie Langel]

* Avoid breaking Element.prototype in browsers which support it. Closes #11004. [cfis, Tobie Langel]

* Prevent Enumerable#eachSlice from entering into an endless loop if passed an argument smaller than 1. Closes #10665. [kangax, Tobie Langel]

* Allow Selector to correctly detect the presence of namespaced attributes. Closes #10987. [Samuel Lebeau, Tobie Langel]
